--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,22 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container-fluid">
+      <% flash.each do |key, mesg| %>
+        <div class="alert alert-<%= key %>">
+          <%= mesg %>
+        </div>
+      <% end %>
+    </div>
+    
+    <%= yield :main_content %>
+    
+    <div class="container-fluid">
+      <h1><%= yield :header %></h1>
+    
+      <%= yield %>
+    </div>
+    
+
   </body>
 </html>
