--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+
+    <%= render 'layouts/navbar' %>
+
     <div class="container-fluid">
       <% flash.each do |key, mesg| %>
         <div class="alert alert-<%= key %>">
