--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,12 +39,16 @@
 
   <div class="actions">
     <%= f.submit "Update", class: 'btn btn-primary' %>
-    <%= link_to "Back", :back, class: 'btn btn-primary' %>
+    <%= link_to "Cancel", :back, class: 'btn btn-warning' %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+</br>
+</br>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<div class='well'>
+  <h3>Delete my account</h3>
+  
+  <p>I am not happy! <%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-
+</div>
