--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-inverse">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <%= link_to 'My Friendship', root_path, class: 'navbar-brand' %>
     </div>
     <div id="navbar">
       <ul class="nav navbar-nav">
-        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'All Users', users_path %></li>
         <% if user_signed_in? %>
-          <li><%= link_to 'Profile', '#' %></li>
+          <li><%= link_to 'My Profile', user_path(current_user) %></li>
         <% end %>
       </ul>
       <ul class="nav navbar-nav pull-right">
@@ -18,13 +18,12 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" role="menu">
-              <li><%= link_to 'Edit', edit_user_registration_path %></li>
+              <li><%= link_to 'Edit Account', edit_user_registration_path %></li>
               <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
         <% else %>
           <li><%= link_to 'Log In', new_user_session_path %></li>
-          <li><%= link_to 'Create an Account', new_user_registration_path %></li>
         <% end %>
       </ul>
     </div>
